@@ -87,12 +87,14 @@ public:
 		DCA1_DECAY,
 		DCA1_SUSTAIN,
 		DCA1_RELEASE,
-		DEF1_PITCHBEND,
-		DEF1_MODWHEEL,
-		DEF1_PRESSURE,
 		OUT1_WIDTH,
 		OUT1_PANNING,
 		OUT1_VOLUME,
+
+		DEF1_PITCHBEND,
+		DEF1_MODWHEEL,
+		DEF1_PRESSURE,
+		DEF1_VELOCITY,
 
 		DCO2_SHAPE1,
 		DCO2_WIDTH1,
@@ -131,12 +133,14 @@ public:
 		DCA2_DECAY,
 		DCA2_SUSTAIN,
 		DCA2_RELEASE,
-		DEF2_PITCHBEND,
-		DEF2_MODWHEEL,
-		DEF2_PRESSURE,
 		OUT2_WIDTH,
 		OUT2_PANNING,
 		OUT2_VOLUME,
+
+		DEF2_PITCHBEND,
+		DEF2_MODWHEEL,
+		DEF2_PRESSURE,
+		DEF2_VELOCITY,
 
 		CHO1_WET,
 		CHO1_DELAY,
