@@ -368,30 +368,6 @@
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
 		lv2:index 42 ;
-		lv2:symbol "DEF1_PITCHBEND" ;
-		lv2:name "DEF1 Pitchbend" ;
-		lv2:default 0.2 ;
-		lv2:minimum 0.0 ;
-		lv2:maximum 1.0 ;
-	], [
-		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 43 ;
-		lv2:symbol "DEF1_MODWHEEL" ;
-		lv2:name "DEF1 Modwheel" ;
-		lv2:default 0.2 ;
-		lv2:minimum 0.0 ;
-		lv2:maximum 1.0 ;
-	], [
-		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 44 ;
-		lv2:symbol "DEF1_PRESSURE" ;
-		lv2:name "DEF1 Pressure" ;
-		lv2:default 0.2 ;
-		lv2:minimum 0.0 ;
-		lv2:maximum 1.0 ;
-	], [
-		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 45 ;
 		lv2:symbol "OUT1_WIDTH" ;
 		lv2:name "OUT1 Stereo Width" ;
 		lv2:default 0.0 ;
@@ -399,7 +375,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 46 ;
+		lv2:index 43 ;
 		lv2:symbol "OUT1_PANNING" ;
 		lv2:name "OUT1 Panning" ;
 		lv2:default 0.0 ;
@@ -407,16 +383,48 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 47 ;
+		lv2:index 44 ;
 		lv2:symbol "OUT1_VOLUME" ;
 		lv2:name "OUT1 Volume" ;
+		lv2:default 0.5 ;
+		lv2:minimum 0.0 ;
+		lv2:maximum 1.0 ;
+	], [
+		a lv2:InputPort, lv2:ControlPort ;
+		lv2:index 45 ;
+		lv2:symbol "DEF1_PITCHBEND" ;
+		lv2:name "DEF1 Pitchbend" ;
+		lv2:default 0.2 ;
+		lv2:minimum 0.0 ;
+		lv2:maximum 1.0 ;
+	], [
+		a lv2:InputPort, lv2:ControlPort ;
+		lv2:index 46 ;
+		lv2:symbol "DEF1_MODWHEEL" ;
+		lv2:name "DEF1 Modwheel" ;
+		lv2:default 0.2 ;
+		lv2:minimum 0.0 ;
+		lv2:maximum 1.0 ;
+	], [
+		a lv2:InputPort, lv2:ControlPort ;
+		lv2:index 47 ;
+		lv2:symbol "DEF1_PRESSURE" ;
+		lv2:name "DEF1 Pressure" ;
+		lv2:default 0.2 ;
+		lv2:minimum 0.0 ;
+		lv2:maximum 1.0 ;
+	], [
+		a lv2:InputPort, lv2:ControlPort ;
+		lv2:index 48 ;
+		lv2:symbol "DEF1_VELOCITY" ;
+		lv2:name "DEF1 Velocity" ;
 		lv2:default 0.5 ;
 		lv2:minimum 0.0 ;
 		lv2:maximum 1.0 ;
 	] ;
 	lv2:port [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 48 ;
+		lv2:index 49 ;
 		lv2:symbol "DCO2_SHAPE1" ;
 		lv2:name "DCO2 Wave Shape 1" ;
 		lv2:portProperty lv2:integer ;
@@ -429,7 +437,7 @@
 		lv2:maximum 3.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 49 ;
+		lv2:index 50 ;
 		lv2:symbol "DCO2_WIDTH1" ;
 		lv2:name "DCO2 Wave Width 1" ;
 		lv2:default 1.0 ;
@@ -437,7 +445,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 50 ;
+		lv2:index 51 ;
 		lv2:symbol "DCO2_SHAPE2" ;
 		lv2:name "DCO2 Wave Shape 2" ;
 		lv2:portProperty lv2:integer ;
@@ -450,7 +458,7 @@
 		lv2:maximum 3.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 51 ;
+		lv2:index 52 ;
 		lv2:symbol "DCO2_WIDTH2" ;
 		lv2:name "DCO2 Wave Width 2" ;
 		lv2:default 1.0 ;
@@ -458,7 +466,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 52 ;
+		lv2:index 53 ;
 		lv2:symbol "DCO2_BALANCE" ;
 		lv2:name "DCO2 Balance" ;
 		lv2:default 0.0 ;
@@ -466,7 +474,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 53 ;
+		lv2:index 54 ;
 		lv2:symbol "DCO2_DETUNE" ;
 		lv2:name "DCO2 Detune" ;
 		lv2:default 0.1 ;
@@ -474,7 +482,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 54 ;
+		lv2:index 55 ;
 		lv2:symbol "DCO2_PHASE" ;
 		lv2:name "DCO2 Phase" ;
 		lv2:default 0.0 ;
@@ -482,7 +490,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 55 ;
+		lv2:index 56 ;
 		lv2:symbol "DCO2_OCTAVE" ;
 		lv2:name "DCO2 Octave" ;
 		lv2:default -2.0 ;
@@ -490,7 +498,7 @@
 		lv2:maximum 4.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 56 ;
+		lv2:index 57 ;
 		lv2:symbol "DCO2_TUNING" ;
 		lv2:name "DCO2 Tuning" ;
 		lv2:default 0.0 ;
@@ -498,7 +506,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 57 ;
+		lv2:index 58 ;
 		lv2:symbol "DCO2_GLIDE" ;
 		lv2:name "DCO2 Glide" ;
 		lv2:default 0.0 ;
@@ -506,7 +514,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 58 ;
+		lv2:index 59 ;
 		lv2:symbol "DCF2_CUTOFF" ;
 		lv2:name "DCF2 Cutoff" ;
 		lv2:default 0.5 ;
@@ -514,7 +522,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 59 ;
+		lv2:index 60 ;
 		lv2:symbol "DCF2_RESO" ;
 		lv2:name "DCF2 Resonance" ;
 		lv2:default 0.0 ;
@@ -522,7 +530,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 60 ;
+		lv2:index 61 ;
 		lv2:symbol "DCF2_TYPE" ;
 		lv2:name "DCF2 Type" ;
 		lv2:portProperty lv2:integer ;
@@ -535,7 +543,7 @@
 		lv2:maximum 3.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 61 ;
+		lv2:index 62 ;
 		lv2:symbol "DCF2_SLOPE" ;
 		lv2:name "DCF2 Slope" ;
 		lv2:portProperty lv2:integer ;
@@ -546,7 +554,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 62 ;
+		lv2:index 63 ;
 		lv2:symbol "DCF2_ENVELOPE" ;
 		lv2:name "DCF2 Envelope" ;
 		lv2:default 1.0 ;
@@ -554,7 +562,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 63 ;
+		lv2:index 64 ;
 		lv2:symbol "DCF2_ATTACK" ;
 		lv2:name "DCF2 Attack" ;
 		lv2:default 0.0 ;
@@ -562,7 +570,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 64 ;
+		lv2:index 65 ;
 		lv2:symbol "DCF2_DECAY" ;
 		lv2:name "DCF2 Decay" ;
 		lv2:default 0.2 ;
@@ -570,7 +578,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 65 ;
+		lv2:index 66 ;
 		lv2:symbol "DCF2_SUSTAIN" ;
 		lv2:name "DCF2 Sustain" ;
 		lv2:default 0.5 ;
@@ -578,7 +586,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 66 ;
+		lv2:index 67 ;
 		lv2:symbol "DCF2_RELEASE" ;
 		lv2:name "DCF2 Release" ;
 		lv2:default 0.5 ;
@@ -586,7 +594,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 67 ;
+		lv2:index 68 ;
 		lv2:symbol "LFO2_SHAPE" ;
 		lv2:name "LFO2 Wave Shape" ;
 		lv2:portProperty lv2:integer ;
@@ -599,7 +607,7 @@
 		lv2:maximum 3.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 68 ;
+		lv2:index 69 ;
 		lv2:symbol "LFO2_WIDTH" ;
 		lv2:name "LFO2 Wave Width" ;
 		lv2:default 1.0 ;
@@ -607,7 +615,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 69 ;
+		lv2:index 70 ;
 		lv2:symbol "LFO2_RATE" ;
 		lv2:name "LFO2 Rate" ;
 		lv2:default 0.5 ;
@@ -615,7 +623,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 70 ;
+		lv2:index 71 ;
 		lv2:symbol "LFO2_SWEEP" ;
 		lv2:name "LFO2 Sweep" ;
 		lv2:default 0.0 ;
@@ -623,7 +631,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 71 ;
+		lv2:index 72 ;
 		lv2:symbol "LFO2_PITCH" ;
 		lv2:name "LFO2 Pitch" ;
 		lv2:default 0.0 ;
@@ -631,7 +639,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 72 ;
+		lv2:index 73 ;
 		lv2:symbol "LFO2_CUTOFF" ;
 		lv2:name "LFO2 Cutoff" ;
 		lv2:default 0.0 ;
@@ -639,7 +647,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 73 ;
+		lv2:index 74 ;
 		lv2:symbol "LFO2_RESO" ;
 		lv2:name "LFO2 Resonance" ;
 		lv2:default 0.0 ;
@@ -647,7 +655,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 74 ;
+		lv2:index 75 ;
 		lv2:symbol "LFO2_PANNING" ;
 		lv2:name "LFO2 Panning" ;
 		lv2:default 0.0 ;
@@ -655,7 +663,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 75 ;
+		lv2:index 76 ;
 		lv2:symbol "LFO2_VOLUME" ;
 		lv2:name "LFO2 Volume" ;
 		lv2:default 0.0 ;
@@ -663,7 +671,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 76 ;
+		lv2:index 77 ;
 		lv2:symbol "LFO2_ATTACK" ;
 		lv2:name "LFO2 Attack" ;
 		lv2:default 0.0 ;
@@ -671,7 +679,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 77 ;
+		lv2:index 78 ;
 		lv2:symbol "LFO2_DECAY" ;
 		lv2:name "LFO2 Decay" ;
 		lv2:default 0.1 ;
@@ -679,7 +687,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 78 ;
+		lv2:index 79 ;
 		lv2:symbol "LFO2_SUSTAIN" ;
 		lv2:name "LFO2 Sustain" ;
 		lv2:default 1.0 ;
@@ -687,7 +695,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 79 ;
+		lv2:index 80 ;
 		lv2:symbol "LFO2_RELEASE" ;
 		lv2:name "LFO2 Release" ;
 		lv2:default 0.5 ;
@@ -695,7 +703,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 80 ;
+		lv2:index 81 ;
 		lv2:symbol "DCA2_VOLUME" ;
 		lv2:name "DCA2 Volume" ;
 		lv2:default 0.5 ;
@@ -703,7 +711,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 81 ;
+		lv2:index 82 ;
 		lv2:symbol "DCA2_ATTACK" ;
 		lv2:name "DCA2 Attack" ;
 		lv2:default 0.0 ;
@@ -711,7 +719,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 82 ;
+		lv2:index 83 ;
 		lv2:symbol "DCA2_DECAY" ;
 		lv2:name "DCA2 Decay" ;
 		lv2:default 0.1 ;
@@ -719,7 +727,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 83 ;
+		lv2:index 84 ;
 		lv2:symbol "DCA2_SUSTAIN" ;
 		lv2:name "DCA2 Sustain" ;
 		lv2:default 1.0 ;
@@ -727,7 +735,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 84 ;
+		lv2:index 85 ;
 		lv2:symbol "DCA2_RELEASE" ;
 		lv2:name "DCA2 Release" ;
 		lv2:default 0.1 ;
@@ -735,31 +743,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 85 ;
-		lv2:symbol "DEF2_PITCHBEND" ;
-		lv2:name "DEF2 Pitchbend" ;
-		lv2:default 0.2 ;
-		lv2:minimum 0.0 ;
-		lv2:maximum 1.0 ;
-	], [
-		a lv2:InputPort, lv2:ControlPort ;
 		lv2:index 86 ;
-		lv2:symbol "DEF2_MODWHEEL" ;
-		lv2:name "DEF2 Modwheel" ;
-		lv2:default 0.2 ;
-		lv2:minimum 0.0 ;
-		lv2:maximum 1.0 ;
-	], [
-		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 87 ;
-		lv2:symbol "DEF2_PRESSURE" ;
-		lv2:name "DEF2 Pressure" ;
-		lv2:default 0.2 ;
-		lv2:minimum 0.0 ;
-		lv2:maximum 1.0 ;
-	], [
-		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 88 ;
 		lv2:symbol "OUT2_WIDTH" ;
 		lv2:name "OUT2 Stereo Width" ;
 		lv2:default 0.0 ;
@@ -767,7 +751,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 89 ;
+		lv2:index 87 ;
 		lv2:symbol "OUT2_PANNING" ;
 		lv2:name "OUT2 Panning" ;
 		lv2:default 0.0 ;
@@ -775,16 +759,48 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 90 ;
+		lv2:index 88 ;
 		lv2:symbol "OUT2_VOLUME" ;
 		lv2:name "OUT2 Volume" ;
+		lv2:default 0.5 ;
+		lv2:minimum 0.0 ;
+		lv2:maximum 1.0 ;
+	], [
+		a lv2:InputPort, lv2:ControlPort ;
+		lv2:index 89 ;
+		lv2:symbol "DEF2_PITCHBEND" ;
+		lv2:name "DEF2 Pitchbend" ;
+		lv2:default 0.2 ;
+		lv2:minimum 0.0 ;
+		lv2:maximum 1.0 ;
+	], [
+		a lv2:InputPort, lv2:ControlPort ;
+		lv2:index 90 ;
+		lv2:symbol "DEF2_MODWHEEL" ;
+		lv2:name "DEF2 Modwheel" ;
+		lv2:default 0.2 ;
+		lv2:minimum 0.0 ;
+		lv2:maximum 1.0 ;
+	], [
+		a lv2:InputPort, lv2:ControlPort ;
+		lv2:index 91 ;
+		lv2:symbol "DEF2_PRESSURE" ;
+		lv2:name "DEF2 Pressure" ;
+		lv2:default 0.2 ;
+		lv2:minimum 0.0 ;
+		lv2:maximum 1.0 ;
+	], [
+		a lv2:InputPort, lv2:ControlPort ;
+		lv2:index 92 ;
+		lv2:symbol "DEF2_VELOCITY" ;
+		lv2:name "DEF2 Velocity" ;
 		lv2:default 0.5 ;
 		lv2:minimum 0.0 ;
 		lv2:maximum 1.0 ;
 	] ;
 	lv2:port [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 91 ;
+		lv2:index 93 ;
 		lv2:symbol "CHO1_WET" ;
 		lv2:name "Chorus Wet" ;
 		lv2:default 0.0 ;
@@ -792,7 +808,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 92 ;
+		lv2:index 94 ;
 		lv2:symbol "CHO1_DELAY" ;
 		lv2:name "Chorus Delay" ;
 		lv2:default 0.5 ;
@@ -800,7 +816,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 93 ;
+		lv2:index 95 ;
 		lv2:symbol "CHO1_FEEDB" ;
 		lv2:name "Chorus Feedback" ;
 		lv2:default 0.5 ;
@@ -808,7 +824,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 94 ;
+		lv2:index 96 ;
 		lv2:symbol "CHO1_RATE" ;
 		lv2:name "Chorus Rate" ;
 		lv2:default 0.5 ;
@@ -816,7 +832,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 95 ;
+		lv2:index 97 ;
 		lv2:symbol "CHO1_MOD" ;
 		lv2:name "Chorus Modulation" ;
 		lv2:default 0.5 ;
@@ -825,7 +841,7 @@
 	] ;
 	lv2:port [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 96 ;
+		lv2:index 98 ;
 		lv2:symbol "FLA1_WET" ;
 		lv2:name "Flanger Wet" ;
 		lv2:default 0.0 ;
@@ -833,7 +849,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 97 ;
+		lv2:index 99 ;
 		lv2:symbol "FLA1_DELAY" ;
 		lv2:name "Flanger Delay" ;
 		lv2:default 0.5 ;
@@ -841,7 +857,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 98 ;
+		lv2:index 100 ;
 		lv2:symbol "FLA1_FEEDB" ;
 		lv2:name "Flanger Feedback" ;
 		lv2:default 0.5 ;
@@ -849,7 +865,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 99 ;
+		lv2:index 101 ;
 		lv2:symbol "FLA1_DAFT" ;
 		lv2:name "Flanger Daft" ;
 		lv2:default 0.0 ;
@@ -858,7 +874,7 @@
 	] ;
 	lv2:port [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 100 ;
+		lv2:index 102 ;
 		lv2:symbol "PHA1_WET" ;
 		lv2:name "Phaser Wet" ;
 		lv2:default 0.0 ;
@@ -866,7 +882,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 101 ;
+		lv2:index 103 ;
 		lv2:symbol "PHA1_RATE" ;
 		lv2:name "Phaser Rate" ;
 		lv2:default 0.5 ;
@@ -874,7 +890,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 102 ;
+		lv2:index 104 ;
 		lv2:symbol "PHA1_FEEDB" ;
 		lv2:name "Phaser Feedback" ;
 		lv2:default 0.5 ;
@@ -882,7 +898,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 103 ;
+		lv2:index 105 ;
 		lv2:symbol "PHA1_DEPTH" ;
 		lv2:name "Phaser Depth" ;
 		lv2:default 0.5 ;
@@ -890,7 +906,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 104 ;
+		lv2:index 106 ;
 		lv2:symbol "PHA1_DAFT" ;
 		lv2:name "Phaser Daft" ;
 		lv2:default 0.0 ;
@@ -899,7 +915,7 @@
 	] ;
 	lv2:port [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 105 ;
+		lv2:index 107 ;
 		lv2:symbol "DEL1_WET" ;
 		lv2:name "Delay Wet" ;
 		lv2:default 0.0 ;
@@ -907,7 +923,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 106 ;
+		lv2:index 108 ;
 		lv2:symbol "DEL1_DELAY" ;
 		lv2:name "Delay Delay" ;
 		lv2:default 0.5 ;
@@ -915,7 +931,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 107 ;
+		lv2:index 109 ;
 		lv2:symbol "DEL1_FEEDB" ;
 		lv2:name "Delay Feedback" ;
 		lv2:default 0.5 ;
@@ -923,7 +939,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 108 ;
+		lv2:index 110 ;
 		lv2:symbol "DEL1_BPM" ;
 		lv2:name "Delay BPM" ;
 		lv2:default 1.8 ;
@@ -932,7 +948,7 @@
 	] ;
 	lv2:port [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 109 ;
+		lv2:index 111 ;
 		lv2:symbol "DYN1_COMPRESS" ;
 		lv2:name "Dynamic Compressor" ;
 		lv2:portProperty lv2:toggled ;
@@ -941,7 +957,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 110 ;
+		lv2:index 112 ;
 		lv2:symbol "DYN1_LIMITER" ;
 		lv2:name "Dynamic Limiter" ;
 		lv2:portProperty lv2:toggled ;
